[gd_scene load_steps=2 format=3 uid="uid://battle_scene"]

[ext_resource type="Script" path="res://scripts/Battle.gd" id="1"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9, 0.95, 0.9, 1)

[node name="PanelTop" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 50.0
offset_right = 750.0
offset_bottom = 150.0

[node name="LabelName" type="Label" parent="PanelTop"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Wild Pokemon"

[node name="ProgressBar" type="ProgressBar" parent="PanelTop"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 77.0
value = 100.0

[node name="TextureRect" type="TextureRect" parent="PanelTop"]
layout_mode = 0
offset_left = -150.0
offset_top = 50.0
offset_right = 0.0
offset_bottom = 200.0
expand_mode = 1
stretch_mode = 5

[node name="PanelBottom" type="Panel" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 300.0
offset_right = 400.0
offset_bottom = 400.0

[node name="LabelName" type="Label" parent="PanelBottom"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Player Pokemon"

[node name="ProgressBar" type="ProgressBar" parent="PanelBottom"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 77.0
value = 100.0

[node name="TextureRect" type="TextureRect" parent="PanelBottom"]
layout_mode = 0
offset_left = 100.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 0.0
expand_mode = 1
stretch_mode = 5

[node name="PanelLog" type="Panel" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 420.0
offset_right = 780.0
offset_bottom = 580.0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Battle Log
"

[node name="PanelMenu" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 420.0
offset_right = 480.0
offset_bottom = 580.0

[node name="HBoxMain" type="HBoxContainer" parent="PanelMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BtnFight" type="Button" parent="PanelMenu/HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3
text = "싸운다"

[node name="BtnCatch" type="Button" parent="PanelMenu/HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3
text = "가방"

[node name="BtnRun" type="Button" parent="PanelMenu/HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3
text = "도망간다"

[node name="HBoxFight" type="HBoxContainer" parent="PanelMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelMenu/HBoxFight"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="BtnMove1" type="Button" parent="PanelMenu/HBoxFight/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Move 1"

[node name="BtnMove2" type="Button" parent="PanelMenu/HBoxFight/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Move 2"

[node name="BtnMove3" type="Button" parent="PanelMenu/HBoxFight/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Move 3"

[node name="BtnMove4" type="Button" parent="PanelMenu/HBoxFight/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Move 4"

[node name="BtnBack" type="Button" parent="PanelMenu/HBoxFight"]
layout_mode = 2
text = "돌아가기"
